== Version 0.3.38 (tzdata v2013g) - 8-Oct-2013

* Updated to tzdata version 2013g
  (http://mm.icann.org/pipermail/tz-announce/2013-October/000015.html).


== Version 0.3.37 (tzdata v2013b) - 11-Mar-2013

* Updated to tzdata version 2013b
  (http://mm.icann.org/pipermail/tz-announce/2013-March/000010.html).


== Version 0.3.36 (tzdata v2013a) - 3-Mar-2013

* Updated to tzdata version 2013a
  (http://mm.icann.org/pipermail/tz-announce/2013-March/000009.html).
* Fix TimezoneTransitionInfo#eql? incorrectly returning false when running on 
  Ruby 2.0.
* Change eql? and == implementations to test the class of the passed in object
  instead of checking individual properties with 'respond_to?'.


== Version 0.3.35 (tzdata v2012i) - 4-Nov-2012

* Updated to tzdata version 2012i
  (http://mm.icann.org/pipermail/tz-announce/2012-November/000007.html).


== Version 0.3.34 (tzdata v2012h) - 27-Oct-2012

* Updated to tzdata version 2012h
  (http://mm.icann.org/pipermail/tz-announce/2012-October/000006.html).


== Version 0.3.33 (tzdata v2012c) - 8-Apr-2012

* Updated to tzdata version 2012c
  (http://article.gmane.org/gmane.comp.time.tz/4859).


== Version 0.3.32 (tzdata v2012b) - 4-Mar-2012

* Updated to tzdata version 2012b
  (http://article.gmane.org/gmane.comp.time.tz/4756).


== Version 0.3.31 (tzdata v2011n) - 6-Nov-2011

* Updated to tzdata version 2011n
  (http://article.gmane.org/gmane.comp.time.tz/4434).


== Version 0.3.30 (tzdata v2011k) - 29-Sep-2011

* Updated to tzdata version 2011k
  (http://article.gmane.org/gmane.comp.time.tz/4084).


== Version 0.3.29 (tzdata v2011h) - 27-Jun-2011

* Updated to tzdata version 2011h
  (http://article.gmane.org/gmane.comp.time.tz/3814).
* Allow the default value of the local_to_utc and period_for_local dst 
  parameter to be specified globally with a Timezone.default_dst attribute.
  Thanks to Kurt Werle for the suggestion and patch.


== Version 0.3.28 (tzdata v2011g) - 13-Jun-2011
