@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2013h) - ??????????
+
+* Updated to tzdata version 2013h
+  (http://mm.icann.org/pipermail/tz-announce/2013-October/000016.html).
+
+
 == Version 0.3.38 (tzdata v2013g) - 8-Oct-2013
 
 * Updated to tzdata version 2013g
